added COL_GREEN_DARK constants

--- a/resources/profiles/CR3D.ini
+++ b/resources/profiles/CR3D.ini
@@ -5519,11 +5519,13 @@ z_offset = 0
 z_step = 0.005
 
 [printer:CR-3D I444]
+autoemit_temperature_commands = 1
 bed_custom_model = 
-bed_custom_texture = 
+bed_custom_texture =
 bed_shape = 0x0,400x0,400x380,0x380
 before_layer_gcode = 
 between_objects_gcode = 
+binary_gcode = 0
 color_change_gcode = @pause
 cooling_tube_length = 5
 cooling_tube_retraction = 91.5
@@ -5533,24 +5535,12 @@ deretract_speed = 0
 end_gcode = M0 ; Turn off everything\n\n
 extra_loading_move = -2
 extruder_colour = #408080
-extruder_fan_offset = 0%
 extruder_offset = 0x0
-extruder_temperature_offset = 0
-fan_kickstart = 0
-fan_percentage = 0
-fan_speedup_overhangs = 1
-fan_speedup_time = 0
-feature_gcode = 
-gcode_filename_illegal_char = 
-gcode_flavor = reprap
-gcode_precision_e = 5
-gcode_precision_xyz = 3
+gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
 host_type = repetier
 inherits = 
-init_z_rotate = 0
 layer_gcode = 
-lift_min = 0.5
 machine_limits_usage = ignore
 machine_max_acceleration_e = 10000,5000
 machine_max_acceleration_extruding = 1500,1250
@@ -5569,20 +5559,13 @@ machine_max_jerk_y = 10,10
 machine_max_jerk_z = 0.2,0.4
 machine_min_extruding_rate = 0,0
 machine_min_travel_rate = 0,0
-max_gcode_per_second = 1500
 max_layer_height = 0
 max_print_height = 400
-milling_diameter = 
-milling_toolchange_end_gcode = 
-milling_toolchange_start_gcode = 
-milling_z_lift = 
 min_layer_height = 0.05
-min_length = 0.035
-nozzle_diameter = 0.4
+nozzle_diameter = 0.6
 parking_pos_retraction = 92
 pause_print_gcode = @pause
 print_host = 
-printer_custom_variables = 
 printer_model = I444
 printer_notes = 
 printer_settings_id = 
@@ -5591,64 +5574,45 @@ printer_variant = Standard 0.4
 printer_vendor = CR3D
 printhost_apikey = 
 printhost_cafile = 
-printhost_port = 
 remaining_times = 0
-remaining_times_type = m73
 retract_before_travel = 2
 retract_before_wipe = 0%
 retract_layer_change = 0
-retract_length = 2
+retract_length = 1.2
 retract_length_toolchange = 10
 retract_lift = 0
 retract_lift_above = 0
 retract_lift_below = 0
-retract_lift_first_layer = 0
-retract_lift_top = "All surfaces"
 retract_restart_extra = 0
 retract_restart_extra_toolchange = 0
 retract_speed = 40
-seam_gap = 15%
 silent_mode = 1
 single_extruder_multi_material = 0
 start_gcode = M98 P"start.g"\n@call PrintStartScript\n
-start_gcode_manual = 0
 template_custom_gcode = 
-thumbnails = 16x16,220x124
-thumbnails_color = #018aff
-thumbnails_custom_color = 0
-thumbnails_end_file = 0
+thumbnails = 
 thumbnails_format = PNG
-thumbnails_with_bed = 1
-time_cost = 3
-time_estimation_compensation = 100%
-time_start_gcode = 60
-time_toolchange = 30
-tool_name = Düse
 toolchange_gcode = 
+travel_lift_before_obstacle = 0
+travel_max_lift = 0
+travel_ramping_lift = 0
+travel_slope = 0
 use_firmware_retraction = 0
 use_relative_e_distances = 1
 use_volumetric_e = 0
 variable_layer_height = 1
 wipe = 0
-wipe_advanced = 0
-wipe_advanced_algo = linear
-wipe_advanced_multiplier = 60
-wipe_advanced_nozzle_melted_volume = 120
-wipe_extra_perimeter = 0
-wipe_inside_depth = 50%
-wipe_inside_end = 1
-wipe_inside_start = 0
-wipe_only_crossing = 1
-wipe_speed = 0
 z_offset = 0
-z_step = 0.005
+
 
 [printer:CR-3D I444-IDEX - DuplicateMode]
+autoemit_temperature_commands = 1
 bed_custom_model = 
 bed_custom_texture = 
 bed_shape = 0x0,380x0,380x380,0x380
 before_layer_gcode = 
 between_objects_gcode = 
+binary_gcode = 0
 color_change_gcode = @pause
 cooling_tube_length = 5
 cooling_tube_retraction = 91.5
@@ -5658,24 +5622,12 @@ deretract_speed = 0,0,0
 end_gcode = M0\n
 extra_loading_move = -2
 extruder_colour = #007577;#C0C0C0;#007577
-extruder_fan_offset = 0%,0%,0%
 extruder_offset = 0x0,0x0,0x0
-extruder_temperature_offset = 0,0,0
-fan_kickstart = 0
-fan_percentage = 0
-fan_speedup_overhangs = 1
-fan_speedup_time = 0
-feature_gcode = 
-gcode_filename_illegal_char = 
-gcode_flavor = reprap
-gcode_precision_e = 5
-gcode_precision_xyz = 3
+gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
 host_type = repetier
 inherits = 
-init_z_rotate = 0
 layer_gcode = 
-lift_min = 0.5
 machine_limits_usage = ignore
 machine_max_acceleration_e = 10000,5000
 machine_max_acceleration_extruding = 1500,1250
@@ -5694,20 +5646,13 @@ machine_max_jerk_y = 10,10
 machine_max_jerk_z = 0.2,0.4
 machine_min_extruding_rate = 0,0
 machine_min_travel_rate = 0,0
-max_gcode_per_second = 1500
 max_layer_height = 0,0,0
 max_print_height = 400
-milling_diameter = 
-milling_toolchange_end_gcode = 
-milling_toolchange_start_gcode = 
-milling_z_lift = 
 min_layer_height = 0.05,0.05,0.05
-min_length = 0.035
 nozzle_diameter = 0.4,0.4,0.4
 parking_pos_retraction = 92
 pause_print_gcode = @pause
 print_host = 
-printer_custom_variables = 
 printer_model = I444-IDEX
 printer_notes = 
 printer_settings_id = 
@@ -5716,9 +5661,7 @@ printer_variant = (DuplicateMode) Standard 0.4
 printer_vendor = CR3D
 printhost_apikey = 
 printhost_cafile = 
-printhost_port = 
 remaining_times = 0
-remaining_times_type = m73
 retract_before_travel = 2,2,2
 retract_before_wipe = 0%,0%,0%
 retract_layer_change = 0,0,0
@@ -5727,53 +5670,36 @@ retract_length_toolchange = 10,10,10
 retract_lift = 0.2,0.2,0.2
 retract_lift_above = 0,0,0
 retract_lift_below = 0,0,0
-retract_lift_first_layer = 0,0,0
-retract_lift_top = "All surfaces";"All surfaces";"All surfaces"
 retract_restart_extra = 0,0,0
 retract_restart_extra_toolchange = 0,0,0
 retract_speed = 80,80,80
-seam_gap = 15%,15%,15%
 silent_mode = 1
 single_extruder_multi_material = 0
 start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder left\nM104  S{first_layer_temperature[0]} T1 ; set extruder temp from extruder right\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T0 S[first_layer_temperature] ; wait for left extruder temp\nM109 T1 S[first_layer_temperature] ; wait for right extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\n\nM98 P"0:/macros/ActivateDuplicateMode.g"\n\nM104  S{first_layer_temperature[0]} T2 ; set extruder temp for the duplicate extruders\nM109 T2 S[first_layer_temperature] ; wait for extruder temp\n
-start_gcode_manual = 0
 template_custom_gcode = 
-thumbnails = 16x16,220x124
-thumbnails_color = #018aff
-thumbnails_custom_color = 0
-thumbnails_end_file = 0
+thumbnails = 
 thumbnails_format = PNG
-thumbnails_with_bed = 1
-time_cost = 4
-time_estimation_compensation = 100%
-time_start_gcode = 60
-time_toolchange = 30
-tool_name = Links;Rechts;DuplicateMode
 toolchange_gcode = 
+travel_lift_before_obstacle = 0,0,0
+travel_max_lift = 0,0,0
+travel_ramping_lift = 0,0,0
+travel_slope = 0,0,0
 use_firmware_retraction = 0
 use_relative_e_distances = 1
 use_volumetric_e = 0
 variable_layer_height = 1
 wipe = 0,0,0
-wipe_advanced = 0
-wipe_advanced_algo = linear
-wipe_advanced_multiplier = 60
-wipe_advanced_nozzle_melted_volume = 120
-wipe_extra_perimeter = 0,0,0
-wipe_inside_depth = 50%,50%,50%
-wipe_inside_end = 1,1,1
-wipe_inside_start = 0,0,0
-wipe_only_crossing = 1,1,1
-wipe_speed = 0,0,0
 z_offset = 0
-z_step = 0.005
+
 
 [printer:CR-3D I444-IDEX]
-bed_custom_model = 
-bed_custom_texture = 
+autoemit_temperature_commands = 1
+bed_custom_model =
+bed_custom_texture =
 bed_shape = 0x0,380x0,380x380,0x380
 before_layer_gcode = 
 between_objects_gcode = 
+binary_gcode = 0
 color_change_gcode = @pause
 cooling_tube_length = 5
 cooling_tube_retraction = 91.5
@@ -5783,24 +5709,12 @@ deretract_speed = 0,0
 end_gcode = M0\n
 extra_loading_move = -2
 extruder_colour = #007577;#C0C0C0
-extruder_fan_offset = 0%,0%
 extruder_offset = 0x0,0x0
-extruder_temperature_offset = 0,0
-fan_kickstart = 0
-fan_percentage = 0
-fan_speedup_overhangs = 1
-fan_speedup_time = 0
-feature_gcode = 
-gcode_filename_illegal_char = 
-gcode_flavor = reprap
-gcode_precision_e = 5
-gcode_precision_xyz = 3
+gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
 host_type = repetier
 inherits = 
-init_z_rotate = 0
 layer_gcode = 
-lift_min = 0.5
 machine_limits_usage = ignore
 machine_max_acceleration_e = 10000,5000
 machine_max_acceleration_extruding = 1500,1250
@@ -5819,20 +5733,13 @@ machine_max_jerk_y = 10,10
 machine_max_jerk_z = 0.2,0.4
 machine_min_extruding_rate = 0,0
 machine_min_travel_rate = 0,0
-max_gcode_per_second = 1500
 max_layer_height = 0,0
 max_print_height = 400
-milling_diameter = 
-milling_toolchange_end_gcode = 
-milling_toolchange_start_gcode = 
-milling_z_lift = 
 min_layer_height = 0.05,0.05
-min_length = 0.035
-nozzle_diameter = 0.4,0.4
+nozzle_diameter = 0.6,0.4
 parking_pos_retraction = 92
 pause_print_gcode = @pause
 print_host = 
-printer_custom_variables = 
 printer_model = I444-IDEX
 printer_notes = 
 printer_settings_id = 
@@ -5841,9 +5748,7 @@ printer_variant = Standard 0.4
 printer_vendor = CR3D
 printhost_apikey = 
 printhost_cafile = 
-printhost_port = 
 remaining_times = 0
-remaining_times_type = m73
 retract_before_travel = 2,2
 retract_before_wipe = 0%,0%
 retract_layer_change = 0,0
@@ -5852,46 +5757,26 @@ retract_length_toolchange = 10,10
 retract_lift = 0.2,0.2
 retract_lift_above = 0,0
 retract_lift_below = 0,0
-retract_lift_first_layer = 0,0
-retract_lift_top = "All surfaces";"All surfaces"
 retract_restart_extra = 0,0
 retract_restart_extra_toolchange = 0,0
 retract_speed = 80,80
-seam_gap = 15%,15%
 silent_mode = 1
 single_extruder_multi_material = 0
 start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder 0\nM104  S{first_layer_temperature[1]} T1 ; set extruder temp from extruder 0\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T[initial_tool] S[first_layer_temperature] ; wait for extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\nT[initial_tool]
-start_gcode_manual = 0
 template_custom_gcode = 
-thumbnails = 16x16,220x124
-thumbnails_color = #018aff
-thumbnails_custom_color = 0
-thumbnails_end_file = 0
+thumbnails = 
 thumbnails_format = PNG
-thumbnails_with_bed = 1
-time_cost = 3.1
-time_estimation_compensation = 100%
-time_start_gcode = 60
-time_toolchange = 30
-tool_name = Links;Rechts
 toolchange_gcode = 
+travel_lift_before_obstacle = 0,0
+travel_max_lift = 0,0
+travel_ramping_lift = 0,0
+travel_slope = 0,0
 use_firmware_retraction = 0
 use_relative_e_distances = 1
 use_volumetric_e = 0
 variable_layer_height = 1
 wipe = 0,0
-wipe_advanced = 0
-wipe_advanced_algo = linear
-wipe_advanced_multiplier = 60
-wipe_advanced_nozzle_melted_volume = 120
-wipe_extra_perimeter = 0,0
-wipe_inside_depth = 50%,50%
-wipe_inside_end = 1,1
-wipe_inside_start = 0,0
-wipe_only_crossing = 1,1
-wipe_speed = 0,0
 z_offset = 0
-z_step = 0.005
 
 
 [printer:CR-3D L1]
