--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -72,7 +72,7 @@ hypertext_settings_category = Layers and perimeters
 disabled_tags = SLA
 
 [hint:Shapes gallery]
-text = Shapes gallery\nDid you know that PrusaSlicer has a Shapes Gallery? You can use the included models as modifiers, negative volumes or as printable objects. Right-click the platter and select<a>Add Shape - Gallery</a>.
+text = Shapes gallery\nDid you know that SliCR-3D V2 has a Shapes Gallery? You can use the included models as modifiers, negative volumes or as printable objects. Right-click the platter and select<a>Add Shape - Gallery</a>.
 hypertext_type = gallery
 disable_modes = simple
 
@@ -82,17 +82,17 @@ hypertext_type = plater
 hypertext_plater_item = arrange
 
 [hint:Negative volume]
-text = Negative volume\nDid you know that you can subtract one mesh from another using the Negative volume modifier? That way you can, for example, create easily resizable holes directly in PrusaSlicer. Read more in the documentation. (Requires Advanced or Expert mode.)
-documentation_link = https://help.prusa3d.com/en/article/negative-volume_238503
+text = Negative volume\nDid you know that you can subtract one mesh from another using the Negative volume modifier? That way you can, for example, create easily resizable holes directly in SliCR-3D V2. Read more in the documentation. (Requires Advanced or Expert mode.)
+documentation_link = https://www.cr3d.de/slicr-3d/
 disabled_tags = SLA; simple
 
 [hint:Simplify mesh]
 text = Simplify mesh\nDid you know that you can reduce the number of triangles in a mesh using the Simplify mesh feature? Right-click the model and select Simplify model. Read more in the documentation.
-documentation_link = https://help.prusa3d.com/en/article/simplify-mesh_238941
+documentation_link = https://www.cr3d.de/slicr-3d/
 
 [hint:Reload from disk]
-text = Reload from disk\nDid you know that if you created a newer version of your model, you can simply reload it in PrusaSlicer? Right-click the model in the 3D view and choose Reload from disk. Read more in the documentation.
-documentation_link = https://help.prusa3d.com/en/article/reload-from-disk_120427
+text = Reload from disk\nDid you know that if you created a newer version of your model, you can simply reload it in SliCR-3D V2? Right-click the model in the 3D view and choose Reload from disk. Read more in the documentation.
+documentation_link = https://www.cr3d.de/slicr-3d/
 
 [hint:Hiding sidebar]
 text = Hiding sidebar\nDid you know that you can hide the right sidebar using the shortcut <b>Shift+Tab</b>? You can also enable the icon for this from the<a>Preferences</a>.
@@ -135,7 +135,7 @@ hypertext_plater_item = undo
 
 [hint:Different layer height for each model]
 text = Different layer height for each model\nDid you know that you can print each model on the plater with a different layer height? Right-click the model in the 3D view, choose Layers and Perimeters and adjust the values in the right panel. Read more in the documentation.
-documentation_link= https://help.prusa3d.com/en/article/per-model-settings_1674
+documentation_link= https://www.cr3d.de/slicr-3d/
 disabled_tags = SLA
 
 [hint:Solid infill threshold area]
@@ -147,7 +147,7 @@ hypertext_settings_category = Infill
 enabled_tags = FFF; expert
 
 [hint:Search functionality]
-text = Search functionality\nDid you know that you use the<a>Search</a>tool to quickly find a specific PrusaSlicer setting? Or use the familiar shortcut <b>Ctrl+F</b>.
+text = Search functionality\nDid you know that you use the<a>Search</a>tool to quickly find a specific SliCR-3D V2 setting? Or use the familiar shortcut <b>Ctrl+F</b>.
 hypertext_type = plater
 hypertext_plater_item = search
 
@@ -171,7 +171,7 @@ text = Load config from G-code\nDid you know that you can use File-Import-Import
 
 [hint:Ironing]
 text = Ironing\nDid you know that you can smooth top surfaces of prints using Ironing? The nozzle will run a special second infill phase at the same layer to fill in holes and flatten any lifted plastic. Read more in the documentation. (Requires Advanced or Expert mode.)
-documentation_link = https://help.prusa3d.com/en/article/ironing_177488
+documentation_link = https://www.cr3d.de/slicr-3d/
 disabled_tags = SLA; simple
 
 [hint:Paint-on supports]
@@ -188,17 +188,17 @@ disabled_tags = SLA; simple
 
 [hint:Insert Pause]
 text = Insert Pause\nDid you know that you can schedule the print to pause at a specific layer? Right-click the layer slider in the Preview and select Add pause print (M601). This can be used to insert magnets, weights or nuts into your prints. Read more in the documentation.
-documentation_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-g-code-at-layer_120490#insert-pause-at-layer
+documentation_link = https://www.cr3d.de/slicr-3d/
 disabled_tags = SLA
 
 [hint:Insert Custom G-code]
 text = Insert Custom G-code\nDid you know that you can insert a custom G-code at a specific layer? Left-click the layer in the Preview, Right-click the plus icon and select Add custom G-code. With this function you can, for example, create a temperature tower. Read more in the documentation.
-documentation_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-g-code-at-layer_120490#insert-custom-g-code-at-layer
+documentation_link = https://www.cr3d.de/slicr-3d/
 disabled_tags = SLA
 
 [hint:Configuration snapshots]
 text = Configuration snapshots\nDid you know that you can roll back to a complete backup of all system and user profiles? You can view and move back and forth between snapshots using the Configuration - <a>Configuration snapshots menu</a>.
-documentation_link = https://help.prusa3d.com/en/article/configuration-snapshots_1776
+documentation_link = https://www.cr3d.de/slicr-3d/
 hypertext_type = menubar
 hypertext_menubar_menu_name = &Configuration
 hypertext_menubar_item_name = &Configuration Snapshots
@@ -219,40 +219,40 @@ hypertext_preferences_item = dlg_settings_layout_mode
 
 [hint:Adaptive infills]
 text = Adaptive infills\nDid you know that you can use the Adaptive cubic and Support cubic infills to decrease the print time and lower the filament consumption? Read more in the documentation.
-documentation_link = https://help.prusa3d.com/en/article/infill-patterns_177130
+documentation_link = https://www.cr3d.de/slicr-3d/
 disabled_tags = SLA
 
 [hint:Lightning infill]
 text = Lightning infill\nDid you know that you can use the Lightning infill to support only the top surfaces, save a lot of the filament, and decrease the print time? Read more in the documentation.
-documentation_link = https://help.prusa3d.com/en/article/infill-patterns_177130
+documentation_link = https://www.cr3d.de/slicr-3d/
 disabled_tags = SLA
 
 [hint:Fullscreen mode]
-text = Fullscreen mode\nDid you know that you can switch PrusaSlicer to fullscreen mode? Use the <b>F11</b> hotkey.
+text = Fullscreen mode\nDid you know that you can switch SliCR-3D V2 to fullscreen mode? Use the <b>F11</b> hotkey.
 enabled_tags = Windows
 
 [hint:Printables integration]
-text = Printables.com integration\nDid you know that when you are browsing Printables.com, you can send 3D model files to PrusaSlicer with a single click? Learn more in the documentation.
-documentation_link = https://help.prusa3d.com/article/prusaslicer-printables-com-integration_399198
+text = Printables.com integration\nDid you know that when you are browsing Printables.com, you can send 3D model files to SliCR-3D V2 with a single click? Learn more in the documentation.
+documentation_link = https://www.cr3d.de/slicr-3d/
 weight = 3
 
 [hint:Cut tool]
 text = Cut tool\nDid you know that you can cut a model at any angle and even create aligning pins with the updated <a>Cut tool</a>? Learn more in the documentation.
-documentation_link = https://help.prusa3d.com/article/cut-tool_1779
+documentation_link = https://www.cr3d.de/slicr-3d/
 hypertext_type = gizmo
 hypertext_gizmo_item = cut
 weight = 3
 
 [hint:Measurement tool]
 text = Measurement tool\nDid you know that you can <a>measure</a> the distances between points, edges and planes, the radius of a hole or the angle between edges or planes? Learn more in the documentation.
-documentation_link = https://help.prusa3d.com/article/measurement-tool_399451
+documentation_link = https://www.cr3d.de/slicr-3d/
 hypertext_type = gizmo
 hypertext_gizmo_item = measure
 weight = 3
 
 [hint:Text tool]
 text = Text tool\nDid you know that you can add custom text labels to your models or even use the text as a modifier? Learn more in the documentation.
-documentation_link = https://help.prusa3d.com/article/text-tool_399460
+documentation_link = https://www.cr3d.de/slicr-3d/
 weight = 3
 
 #[hint:]
