added cube calibration and fixed bugs

--- a/resources/profiles/CR3D.ini
+++ b/resources/profiles/CR3D.ini
@@ -61,7 +61,7 @@ bed_texture = C2.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:C2-IDEX-Xtend]
-name = C2-IDEX Xtend
+name = C2-IDEX-Xtend
 variants = Standard 0.4; (DuplicateMode) Standard 0.4
 technology = FFF
 family = C-Serie
