added cr-3d templates & updated versions

--- a/resources/profiles/CR3D.ini
+++ b/resources/profiles/CR3D.ini
@@ -2154,7 +2154,7 @@ filament_type = "ABS Matt"
 filament_unload_time = 0
 filament_unloading_speed = 90
 filament_unloading_speed_start = 100
-filament_vendor = 
+filament_vendor = CR-3D
 filament_wipe = nil
 first_layer_bed_temperature = 100
 first_layer_temperature = 275
