added cr3d calibrations

--- a/src/slic3r/CMakeLists.txt
+++ b/src/slic3r/CMakeLists.txt
@@ -25,6 +25,8 @@ GUI/CalibrationTempDialog.cpp
 GUI/CalibrationTempDialog.hpp
 GUI/CalibrationCubeDialog.cpp
 GUI/CalibrationCubeDialog.hpp
+GUI/CalibrationCr3dDialog.hpp
+GUI/CalibrationCr3dDialog.cpp
     GUI/ArrangeSettingsDialogImgui.hpp
     GUI/ArrangeSettingsDialogImgui.cpp
     GUI/SysInfoDialog.cpp
