fixed profiles and temp dialog again

--- a/resources/profiles/CR3D.ini
+++ b/resources/profiles/CR3D.ini
@@ -101,7 +101,7 @@ name = I655-IDEX
 variants = Standard 0.6; (DuplicateMode) Standard 0.6
 technology = FFF
 family = I-Serie
-bed_model = PrintBed_I655-IDEX.stl
+bed_model = PrintBed_I655.stl
 bed_texture = I655-IDEX.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
@@ -111,7 +111,7 @@ variants = Standard 0.6; (DuplicateMode) Standard 0.6
 technology = FFF
 family = I-Serie
 bed_model = PrintBed_I65X.stl
-bed_texture = I65X.svg
+bed_texture = I655.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:I65X-IDEX]
@@ -120,7 +120,7 @@ variants = Standard 0.6; (DuplicateMode) Standard 0.6
 technology = FFF
 family = I-Serie
 bed_model = PrintBed_I65X.stl
-bed_texture = I655.svg
+bed_texture = I655-IDEX.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:L1]
@@ -2913,7 +2913,7 @@ start_filament_gcode = "; Filament gcode\n@call BauraumheizungAktivieren\n"
 temperature = 275
 
 
-[filament:CR-3D PA15 CRbon15]
+[filament:CR-3D PA12 CRbon15]
 bed_temperature = 90
 bridge_fan_speed = 100
 compatible_printers = 
@@ -4148,6 +4148,91 @@ variable_layer_height = 1
 wipe = 1
 z_offset = 0
 
+[printer:CR-3D C2-IDEX]
+autoemit_temperature_commands = 1
+bed_custom_model = 
+bed_custom_texture = 
+bed_shape = 0x0,320x0,320x250,0x250
+before_layer_gcode = 
+between_objects_gcode = 
+binary_gcode = 0
+color_change_gcode = @pause
+cooling_tube_length = 5
+cooling_tube_retraction = 91.5
+default_filament_profile = ""
+default_print_profile = 
+deretract_speed = 0,0
+end_gcode = M0\n
+extra_loading_move = -2
+extruder_colour = #007577;#C0C0C0
+extruder_offset = 0x0,0x0
+gcode_flavor = reprapfirmware
+high_current_on_filament_swap = 0
+host_type = repetier
+inherits = 
+layer_gcode = 
+machine_limits_usage = ignore
+machine_max_acceleration_e = 10000,5000
+machine_max_acceleration_extruding = 1500,1250
+machine_max_acceleration_retracting = 1500,1250
+machine_max_acceleration_travel = 1500,1250
+machine_max_acceleration_x = 9000,1000
+machine_max_acceleration_y = 9000,1000
+machine_max_acceleration_z = 500,200
+machine_max_feedrate_e = 120,120
+machine_max_feedrate_x = 500,200
+machine_max_feedrate_y = 500,200
+machine_max_feedrate_z = 12,12
+machine_max_jerk_e = 2.5,2.5
+machine_max_jerk_x = 10,10
+machine_max_jerk_y = 10,10
+machine_max_jerk_z = 0.2,0.4
+machine_min_extruding_rate = 0,0
+machine_min_travel_rate = 0,0
+max_layer_height = 0,0
+max_print_height = 300
+min_layer_height = 0.05,0.05
+nozzle_diameter = 0.4, 0.4
+parking_pos_retraction = 92
+pause_print_gcode = @pause
+print_host = 
+printer_model = C2-IDEX
+printer_notes = 
+printer_settings_id = 
+printer_technology = FFF
+printer_variant = Standard 0.4
+printer_vendor = CR3D
+printhost_apikey = 
+printhost_cafile = 
+remaining_times = 0
+retract_before_travel = 2,2
+retract_before_wipe = 0%,0%
+retract_layer_change = 0,0
+retract_length = 1.5,1
+retract_length_toolchange = 10,10
+retract_lift = 0.2,0.2
+retract_lift_above = 0,0
+retract_lift_below = 0,0
+retract_restart_extra = 0,0
+retract_restart_extra_toolchange = 0,0
+retract_speed = 60,60
+silent_mode = 0
+single_extruder_multi_material = 0
+start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder 0\nM104  S{first_layer_temperature[1]} T1 ; set extruder temp from extruder 0\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T[initial_tool] S[first_layer_temperature] ; wait for extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\nT[initial_tool]
+template_custom_gcode = 
+thumbnails = 
+thumbnails_format = PNG
+toolchange_gcode = 
+travel_lift_before_obstacle = 0,0
+travel_max_lift = 0,0
+travel_ramping_lift = 0,0
+travel_slope = 0,0
+use_firmware_retraction = 0
+use_relative_e_distances = 1
+use_volumetric_e = 0
+variable_layer_height = 1
+wipe = 1,1
+z_offset = 0
 
 [printer:CR-3D C2-IDEX-DuplicateMode]
 autoemit_temperature_commands = 1
@@ -4165,7 +4250,7 @@ default_print_profile =
 deretract_speed = 0,0,0
 end_gcode = M0\n
 extra_loading_move = -2
-extruder_colour = #007577;#C0C0C0;#00FFFF
+extruder_colour = #007577;#C0C0C0;#a72920
 extruder_offset = 0x0,0x0,0x0
 gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
@@ -4235,8 +4320,7 @@ variable_layer_height = 1
 wipe = 0,0,0
 z_offset = 0
 
-
-[printer:CR-3D C2-IDEX]
+[printer:CR-3D C2-IDEX-Xtend]
 autoemit_temperature_commands = 1
 bed_custom_model = 
 bed_custom_texture = 
@@ -4278,13 +4362,13 @@ machine_max_jerk_z = 0.2,0.4
 machine_min_extruding_rate = 0,0
 machine_min_travel_rate = 0,0
 max_layer_height = 0,0
-max_print_height = 300
+max_print_height = 500
 min_layer_height = 0.05,0.05
-nozzle_diameter = 0.4,0.4
+nozzle_diameter = 0.4, 0.4
 parking_pos_retraction = 92
 pause_print_gcode = @pause
 print_host = 
-printer_model = C2-IDEX
+printer_model = C2-IDEX-Xtend
 printer_notes = 
 printer_settings_id = 
 printer_technology = FFF
@@ -4322,25 +4406,24 @@ variable_layer_height = 1
 wipe = 1,1
 z_offset = 0
 
-
 [printer:CR-3D C2-IDEX-Xtend-DuplicateMode]
 autoemit_temperature_commands = 1
-bed_custom_model = 
+bed_custom_model =
 bed_custom_texture =
 bed_shape = 0x0,320x0,320x250,0x250
 before_layer_gcode = 
 between_objects_gcode = 
 binary_gcode = 0
-color_change_gcode = @pause
+color_change_gcode = M600
 cooling_tube_length = 5
 cooling_tube_retraction = 91.5
 default_filament_profile = ""
 default_print_profile = 
-deretract_speed = 0,0
+deretract_speed = 0,0,0
 end_gcode = M0\n
 extra_loading_move = -2
-extruder_colour = #007577;#C0C0C0
-extruder_offset = 0x0,0x0
+extruder_colour = #007577;#C0C0C0;#a72920
+extruder_offset = 0x0,0x0,0x0
 gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
 host_type = repetier
@@ -4364,49 +4447,49 @@ machine_max_jerk_y = 10,10
 machine_max_jerk_z = 0.2,0.4
 machine_min_extruding_rate = 0,0
 machine_min_travel_rate = 0,0
-max_layer_height = 0,0
+max_layer_height = 0,0.3,0
 max_print_height = 500
-min_layer_height = 0.05,0.05
-nozzle_diameter = 0.4,0.4
+min_layer_height = 0.05,0.05,0.05
+nozzle_diameter = 0.4,0.4,0.4
 parking_pos_retraction = 92
-pause_print_gcode = @pause
+pause_print_gcode = M601
 print_host = 
 printer_model = C2-IDEX-Xtend
 printer_notes = 
 printer_settings_id = 
 printer_technology = FFF
-printer_variant = Standard 0.4
+printer_variant = (DuplicateMode) Standard 0.4
 printer_vendor = CR3D
 printhost_apikey = 
 printhost_cafile = 
 remaining_times = 0
-retract_before_travel = 2,2
-retract_before_wipe = 0%,0%
-retract_layer_change = 0,0
-retract_length = 1.5,1.5
-retract_length_toolchange = 10,10
-retract_lift = 0.2,0.2
-retract_lift_above = 0,0
-retract_lift_below = 0,0
-retract_restart_extra = 0,0
-retract_restart_extra_toolchange = 0,0
-retract_speed = 60,60
+retract_before_travel = 2,2,2
+retract_before_wipe = 0%,0%,0%
+retract_layer_change = 0,0,0
+retract_length = 2,2,2
+retract_length_toolchange = 10,10,10
+retract_lift = 0.2,0.2,0.2
+retract_lift_above = 0,0,0
+retract_lift_below = 0,0,0
+retract_restart_extra = 0,0,0
+retract_restart_extra_toolchange = 0,0,0
+retract_speed = 80,80,80
 silent_mode = 1
 single_extruder_multi_material = 0
-start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder 0\nM104  S{first_layer_temperature[1]} T1 ; set extruder temp from extruder 0\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T[initial_tool] S[first_layer_temperature] ; wait for extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\nT[initial_tool]
+start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder left\nM104  S{first_layer_temperature[0]} T1 ; set extruder temp from extruder right\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T0 S[first_layer_temperature] ; wait for left extruder temp\nM109 T1 S[first_layer_temperature] ; wait for right extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\nM98 P"0:/macros/ActivateDuplicateMode.g"\n\nM104  S{first_layer_temperature[0]} T2 ; set extruder temp for the duplicate extruders\nM109 T2 S[first_layer_temperature] ; wait for extruder temp\n
 template_custom_gcode = 
 thumbnails = 
 thumbnails_format = PNG
 toolchange_gcode = 
-travel_lift_before_obstacle = 0,0
-travel_max_lift = 0,0
-travel_ramping_lift = 0,0
-travel_slope = 0,0
+travel_lift_before_obstacle = 0,0,0
+travel_max_lift = 0,0,0
+travel_ramping_lift = 0,0,0
+travel_slope = 0,0,0
 use_firmware_retraction = 0
 use_relative_e_distances = 1
 use_volumetric_e = 0
 variable_layer_height = 1
-wipe = 1,1
+wipe = 0,0,0
 z_offset = 0
 
 [printer:CR-3D I444]
@@ -4496,7 +4579,7 @@ wipe = 0
 z_offset = 0
 
 
-[printer:CR-3D I444-IDEX - DuplicateMode]
+[printer:CR-3D I444-IDEX-DuplicateMode]
 autoemit_temperature_commands = 1
 bed_custom_model = 
 bed_custom_texture = 
@@ -4512,7 +4595,7 @@ default_print_profile =
 deretract_speed = 0,0,0
 end_gcode = M0\n
 extra_loading_move = -2
-extruder_colour = #007577;#C0C0C0;#007577
+extruder_colour = #007577;#C0C0C0;#a72920
 extruder_offset = 0x0,0x0,0x0
 gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
@@ -4674,7 +4757,7 @@ z_offset = 0
 autoemit_temperature_commands = 1
 bed_custom_model =
 bed_custom_texture =
-bed_shape = 0x0,380x0,380x380,0x380
+bed_shape = 0x0,590x0,590x490,0x490
 before_layer_gcode = 
 between_objects_gcode = 
 binary_gcode = 0
@@ -4686,7 +4769,7 @@ default_print_profile =
 deretract_speed = 0,0
 end_gcode = M0\n
 extra_loading_move = -2
-extruder_colour = #007577;#C0C0C0
+extruder_colour = #007577
 extruder_offset = 0x0,0x0
 gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
@@ -4712,9 +4795,9 @@ machine_max_jerk_z = 0.2,0.4
 machine_min_extruding_rate = 0,0
 machine_min_travel_rate = 0,0
 max_layer_height = 0,0
-max_print_height = 400
+max_print_height = 500
 min_layer_height = 0.05,0.05
-nozzle_diameter = 0.6,0.4
+nozzle_diameter = 0.6
 parking_pos_retraction = 92
 pause_print_gcode = @pause
 print_host = 
@@ -4740,7 +4823,7 @@ retract_restart_extra_toolchange = 0,0
 retract_speed = 80,80
 silent_mode = 1
 single_extruder_multi_material = 0
-start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder 0\nM104  S{first_layer_temperature[1]} T1 ; set extruder temp from extruder 0\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T[initial_tool] S[first_layer_temperature] ; wait for extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\nT[initial_tool]
+start_gcode = M98 P"start.g"\n@call PrintStartScript\nT[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder 0\nM104  S{first_layer_temperature[1]} T1 ; set extruder temp from extruder 0\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T[initial_tool] S[first_layer_temperature] ; wait for extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\nT[initial_tool]
 template_custom_gcode = 
 thumbnails = 
 thumbnails_format = PNG
@@ -4757,10 +4840,9 @@ wipe = 0,0
 z_offset = 0
 
 [printer:CR-3D I655-IDEX]
-# generated by PrusaSlicer 2.7.1+win64 on 2024-01-12 at 15:58:13 UTC
 autoemit_temperature_commands = 1
 bed_custom_model = 
-bed_custom_texture = 
+bed_custom_texture =
 bed_shape = 0x0,590x0,590x490,0x490
 before_layer_gcode = 
 between_objects_gcode = 
@@ -4773,7 +4855,7 @@ default_print_profile =
 deretract_speed = 0
 end_gcode = M0 ; Turn off everything\n\n
 extra_loading_move = -2
-extruder_colour = #408080
+extruder_colour = #408080;#C0C0C0
 extruder_offset = 0x0
 gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
@@ -4801,11 +4883,11 @@ machine_min_travel_rate = 0,0
 max_layer_height = 0
 max_print_height = 500
 min_layer_height = 0.1
-nozzle_diameter = 0.6
+nozzle_diameter = 0.6,0.6
 parking_pos_retraction = 92
 pause_print_gcode = @pause
 print_host = 
-printer_model = I655
+printer_model = I655-IDEX
 printer_notes = 
 printer_settings_id = 
 printer_technology = FFF
@@ -4827,7 +4909,7 @@ retract_restart_extra_toolchange = 0
 retract_speed = 80
 silent_mode = 1
 single_extruder_multi_material = 0
-start_gcode = M98 P"start.g"\n@call PrintStartScript\n
+start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder 0\nM104  S{first_layer_temperature[1]} T1 ; set extruder temp from extruder 0\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T[initial_tool] S[first_layer_temperature] ; wait for extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\nT[initial_tool]
 template_custom_gcode = 
 thumbnails = 
 thumbnails_format = PNG
@@ -4860,7 +4942,7 @@ default_print_profile =
 deretract_speed = 0
 end_gcode = M0 ; Turn off everything\n\n
 extra_loading_move = -2
-extruder_colour = #408080
+extruder_colour = #408080;#C0C0C0;#a72920
 extruder_offset = 0x0
 gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
@@ -4888,11 +4970,11 @@ machine_min_travel_rate = 0,0
 max_layer_height = 0
 max_print_height = 500
 min_layer_height = 0.1
-nozzle_diameter = 0.4
+nozzle_diameter = 0.6,0.6,0.6
 parking_pos_retraction = 92
 pause_print_gcode = @pause
 print_host = 
-printer_model = I655
+printer_model = I655-IDEX
 printer_notes = 
 printer_settings_id = 
 printer_technology = FFF
@@ -4914,7 +4996,7 @@ retract_restart_extra_toolchange = 0
 retract_speed = 80
 silent_mode = 1
 single_extruder_multi_material = 0
-start_gcode = M98 P"start.g"\n@call PrintStartScript\n
+start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder left\nM104  S{first_layer_temperature[0]} T1 ; set extruder temp from extruder right\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T0 S[first_layer_temperature] ; wait for left extruder temp\nM109 T1 S[first_layer_temperature] ; wait for right extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\n\nM98 P"0:/macros/ActivateDuplicateMode.g"\n\nM104  S{first_layer_temperature[0]} T2 ; set extruder temp for the duplicate extruders\nM109 T2 S[first_layer_temperature] ; wait for extruder temp\n
 template_custom_gcode = 
 thumbnails = 
 thumbnails_format = PNG
@@ -4973,13 +5055,13 @@ machine_max_jerk_z = 0.2,0.4
 machine_min_extruding_rate = 0,0
 machine_min_travel_rate = 0,0
 max_layer_height = 0
-max_print_height = 500
+max_print_height = 1000
 min_layer_height = 0.1
-nozzle_diameter = 0.4
+nozzle_diameter = 0.6
 parking_pos_retraction = 92
 pause_print_gcode = @pause
 print_host = 
-printer_model = I655
+printer_model = I65X
 printer_notes = 
 printer_settings_id = 
 printer_technology = FFF
@@ -5016,7 +5098,6 @@ use_volumetric_e = 0
 variable_layer_height = 1
 wipe = 0
 z_offset = 0
-
 
 [printer:CR-3D I65X-IDEX]
 autoemit_temperature_commands = 1
@@ -5034,7 +5115,7 @@ default_print_profile =
 deretract_speed = 0
 end_gcode = M0 ; Turn off everything\n\n
 extra_loading_move = -2
-extruder_colour = #408080
+extruder_colour = #408080; #C0C0C0
 extruder_offset = 0x0
 gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
@@ -5060,13 +5141,13 @@ machine_max_jerk_z = 0.2,0.4
 machine_min_extruding_rate = 0,0
 machine_min_travel_rate = 0,0
 max_layer_height = 0
-max_print_height = 500
+max_print_height = 1000
 min_layer_height = 0.1
-nozzle_diameter = 0.4
+nozzle_diameter = 0.6,0.6
 parking_pos_retraction = 92
 pause_print_gcode = @pause
 print_host = 
-printer_model = I655
+printer_model = I65X-IDEX
 printer_notes = 
 printer_settings_id = 
 printer_technology = FFF
@@ -5088,7 +5169,7 @@ retract_restart_extra_toolchange = 0
 retract_speed = 80
 silent_mode = 1
 single_extruder_multi_material = 0
-start_gcode = M98 P"start.g"\n@call PrintStartScript\n
+start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder 0\nM104  S{first_layer_temperature[1]} T1 ; set extruder temp from extruder 0\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T[initial_tool] S[first_layer_temperature] ; wait for extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\nT[initial_tool]
 template_custom_gcode = 
 thumbnails = 
 thumbnails_format = PNG
@@ -5104,11 +5185,10 @@ variable_layer_height = 1
 wipe = 0
 z_offset = 0
 
-[printer:CR-3D I165-IDEX-DuplicateMode]
-# generated by PrusaSlicer 2.7.1+win64 on 2024-01-12 at 12:43:46 UTC
+[printer:CR-3D I65X-IDEX-DuplicateMode]
 autoemit_temperature_commands = 1
 bed_custom_model =
-bed_custom_texture = 
+bed_custom_texture =
 bed_shape = 0x0,590x0,590x490,0x490
 before_layer_gcode = 
 between_objects_gcode = 
@@ -5121,7 +5201,7 @@ default_print_profile =
 deretract_speed = 0
 end_gcode = M0 ; Turn off everything\n\n
 extra_loading_move = -2
-extruder_colour = #408080
+extruder_colour = #408080; #C0C0C0; #a72920
 extruder_offset = 0x0
 gcode_flavor = reprapfirmware
 high_current_on_filament_swap = 0
@@ -5147,13 +5227,13 @@ machine_max_jerk_z = 0.2,0.4
 machine_min_extruding_rate = 0,0
 machine_min_travel_rate = 0,0
 max_layer_height = 0
-max_print_height = 500
+max_print_height = 1000
 min_layer_height = 0.1
-nozzle_diameter = 0.4
+nozzle_diameter = 0.6,0.6,0.6
 parking_pos_retraction = 92
 pause_print_gcode = @pause
 print_host = 
-printer_model = I655
+printer_model = I65X-IDEX
 printer_notes = 
 printer_settings_id = 
 printer_technology = FFF
@@ -5175,7 +5255,7 @@ retract_restart_extra_toolchange = 0
 retract_speed = 80
 silent_mode = 1
 single_extruder_multi_material = 0
-start_gcode = M98 P"start.g"\n@call PrintStartScript\n
+start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder left\nM104  S{first_layer_temperature[0]} T1 ; set extruder temp from extruder right\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T0 S[first_layer_temperature] ; wait for left extruder temp\nM109 T1 S[first_layer_temperature] ; wait for right extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\n\nM98 P"0:/macros/ActivateDuplicateMode.g"\n\nM104  S{first_layer_temperature[0]} T2 ; set extruder temp for the duplicate extruders\nM109 T2 S[first_layer_temperature] ; wait for extruder temp\n
 template_custom_gcode = 
 thumbnails = 
 thumbnails_format = PNG
@@ -5190,7 +5270,6 @@ use_volumetric_e = 0
 variable_layer_height = 1
 wipe = 0
 z_offset = 0
-
 
 [printer:CR-3D L1]
 autoemit_temperature_commands = 1
