Register new GOO output format in SLAArchiveFormatRegistry
Create header and source files for GOO format and add them to the build
system. Register GOOWriter and GOOReader classes in SLAArchiveFormatRegistry.

--- a/src/libslic3r/CMakeLists.txt
+++ b/src/libslic3r/CMakeLists.txt
@@ -143,6 +143,8 @@ set(SLIC3R_SOURCES
     Format/SL1_SVG.cpp
     Format/AnycubicSLA.hpp
     Format/AnycubicSLA.cpp
+    Format/GOO.hpp
+    Format/GOO.cpp
     Format/STEP.hpp
     Format/STEP.cpp
     Format/SVG.hpp
