--- a/resources/profiles/Artillery.ini
+++ b/resources/profiles/Artillery.ini
@@ -401,7 +401,7 @@ fill_angle = 45
 fill_density = 15%
 first_layer_acceleration = 500
 first_layer_extrusion_width = 0.42
-first_layer_height = 150%
+first_layer_height = 0.25
 first_layer_speed = 20
 gap_fill_speed = 30
 gcode_comments = 1
